Enforce absolute post body limit
